objects/Job_Task_Role__c/Job_Task_Role__c.object-meta.xml
<CustomObject>
    <description>Staff assigned to the Job Tasks.</description>
    <label>Task Staff Assigned</label>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Staff Assigned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>