objects/Job_Task_Role__c/fields/Dummy_Text_1__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Text_1__c</fullName>
    <description>This is variable field.</description>
    <label>Dummy Text 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>