objects/Job_Task_Role__c/fields/Job_Task__c.field-meta.xml
<CustomField>
    <fullName>Job_Task__c</fullName>
    <label>Job Task</label>
    <referenceTo>Job_Task__c</referenceTo>
    <relationshipName>Job_Task_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>