objects/Job_Task_Role__c/fields/Task_Final_Due__c.field-meta.xml
<CustomField>
    <fullName>Task_Final_Due__c</fullName>
    <formula>Job_Task__r.Revised_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Final Due</label>
    <type>Date</type>
</CustomField>